crates/core/src/snapshots/ion_core__tests__unexpected_token_2.snap
---
source: crates/core/src/lib.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Invalid token
 --> <code>:1:1
  |
1 | "
  | ^

